--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,9 +16,13 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - name: Install Packages
-        run: npm install
+        uses: borales/actions-yarn@v2.3.0
+          with:
+            cmd: install
       - name: Build page
-        run: npm run build
+        uses: borales/actions-yarn@v2.3.0
+          with:
+            cmd: build
       - name: Deploy to gh-pages
         uses: peaceiris/actions-gh-pages@v3
         with:
