--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
     "typescript": "^4.1.3",
     "web-vitals": "^1.0.1"
   },
+  "devDependencies": {
+    "changelog-to-react-component": "^0.6.3"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "lint": "eslint --ext js,ts,tsx src",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "generate-changelog": "yarn run changelog-to-react-component --faviconPath public/favicon.ico"
   },
   "eslintConfig": {
     "extends": [
